--- a/sem3/webtech/U1/html/1.html
+++ b/sem3/webtech/U1/html/1.html
@@ -21,6 +21,20 @@
             tag, displaying extra spaces and 
             new lines as it is
         </pre>
-        
+        <br>
+        <h2>Subscript and superscript</h2>
+        <p>H<sub>2</sub>O is the formula for water</p>
+        <p>E = mc<sup>2</sup> is the formula for energy</p>
+        <br>
+        <h2>inserting images</h2>
+        <img src="lolcat.jpg" alt="cat image" width="500" height="300" align="center" title="Funny Cat">
+        <br>
+        <h2>Links</h2>
+        <a href="http://www.google.com">Click here</a>
+        <!--<a href="dom1.html">Dom1.html</a>-->
+        <br>
+        <a href="lolcat.jpg">lolcat</a> 
+        <br>
+        <a = target="_blank" href="http://www.google.com"><img width="200px" height="200px" src="lolcat.jpg" alt="meow"></a>
     </body>
 </html>
