--- a/sem3/webtech/U1/JavaScript/1.html
+++ b/sem3/webtech/U1/JavaScript/1.html
@@ -13,6 +13,7 @@
         document.writeln(JSON.stringify(mixed[0])); 
     </script>
     <br>
+
     <script>
         let a = 10; let b = 3;
         document.writeln("<h2>Arithematic operators</h2>");
@@ -39,10 +40,8 @@
         document.writeln((9 != '9') + "<br>");
         document.writeln("<h2>ternary operator</h2>");
         
-        //let age = 99
-        //document.writelen(age>18?"Vote":"NO");
         //Ternary operator
-        let age=30
+        let age=9
         document.writeln(age>18?"Vote":"No Vote");
         document.writeln( "<br>");
 //Type operator
@@ -53,9 +52,6 @@
 
         let arr=[1,2,3,4,5];
         document.writeln((arr instanceof Array) + "<br>");
-        document.writeln((grr instanceof Array) + "<br>"); //wrong.
-
-        
 
     </script>
     <br><br>
@@ -83,7 +79,7 @@
         };
         */
        document.writeln( "<br>");
-       let add = (a,b) => {
+       let add = (a,b) =>{
         let sum = a+b;
         document.writeln("Sum: " + sum + "<br>")
         }
@@ -99,10 +95,9 @@
        function hello(){
             document.writeln("Hello from function")
        };
-       let greet = () => document.writeln("Hello from greet");
-       greet();
-
-
+       let greet1 = () => document.writeln("Hello from greet1");
+       greet1();
     </script>
+    <br><br>
 </body>
 </html>
