--- a/sem3/webtech/U1/html/8-aug-25.html
+++ b/sem3/webtech/U1/html/8-aug-25.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <title>week1</title>
+    <title>basic</title>
     <body>
-        <h>Lists</h>
+        <h2>Lists</h2>
         <!--Lists-->
-        <!--UNordered list-->
-        <ul type = "circle">
-        <li>Web Tech</li>
-        <li>Cats</li>
-        <li>Dogs</li>
-        <li>Cats day</li>
+        <!--Unordered list-->
+        <h3>1.Unordered list</h3>
+        <ul type = "square"> <!--circle, square, disc-->
+            <li>Web Tech</li>
+            <li>Cats</li>
+            <li>Dogs</li>
+            <li>Cats day</li>
         </ul>
         <br>
     <!--ordered list-->
-        <ol type = "circle">
-        <li>Web Tech</li>
-        <li>Cats</li>
-        <li>Dogs</li>
-        <li>Cats day</li>
+        <h3>2.Ordered list</h3>
+        <!--default type is numbers-->
+        <ol type = "A" start="-1"> <!--1, A, a, I, i-->
+            <li>Web Tech</li>
+            <li>Cats</li>
+            <li>Dogs</li>
+            <li>Cats day</li>
         </ol>
         <!--ordered list-->
         <ol type = "I" start = "3"> <!--Start from 3-->
-        <li>Web Tech</li>
-        <li>Cats</li>
-        <li>Dogs</li>
-        <li>Cats day</li>
+            <li>Web Tech</li>
+            <li>Cats</li>
+            <li>Dogs</li>
+            <li>Cats day</li>
         </ol>
     <!--Nested list-->
+    <h3>3.Nested list</h3>
+    <!--ul inside ol or ol inside ul-->
     <ul>
         <li>Cat 1
             <ol type = "I">
@@ -44,6 +49,7 @@
         </li>
     </ul>
     <br>
+    <h3>4.Definition List</h3>
     <!--Definition List: consists of 2 components
     1.term.
     2.definition of the term-->
@@ -58,13 +64,13 @@
     <h>Table tags</h>
     <br>
     <table>
-        <table border>
+        <table border="9"> <!--border attribute-->
             <caption>Project Details</caption>
         <tr> <!--table row-->
             <th rowspan = 2>Serial No.</th> <!--table heading-->
             <th rowspan = 2>SEM</th> <!--merging rows using rowspan-->
             <th rowspan = 2>Title</th> 
-            <th colspan="2">Team member</th> <!--merging cols using colspan-->
+            <th colspan = 2>Team member</th> <!--merging cols using colspan-->
         </tr>
         <tr>
             <th>SRN</th>
@@ -89,8 +95,7 @@
     <table>
         <table border>
             <tr>
-                <th></th>
-                <th colspan="2">III Sem</th>
+                <th colspan="3">III Sem</th>
             </tr>
             <tr>
                 <th>Name</th>
@@ -98,6 +103,5 @@
                 <th>Marks</th>
             </tr>
     </table>
-    
     </body>
 </html>
